[gd_scene load_steps=8 format=3 uid="uid://c1ft78rr6ksxt"]

[ext_resource type="Script" uid="uid://70wj61rg7o8a" path="res://Scripts/time_crystal.gd" id="1_y1l36"]
[ext_resource type="Texture2D" uid="uid://ctkm7nmrthopo" path="res://Textures/pentagon.png" id="2_ln717"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hym66"]
radius = 0.204951

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nok4b"]
transparency = 1
albedo_color = Color(0.21, 1, 0.828833, 0.709804)
emission_enabled = true
emission = Color(0, 0.8, 0.72, 1)
emission_energy_multiplier = 6.0
grow_amount = 0.05

[sub_resource type="SphereMesh" id="SphereMesh_hym66"]
material = SubResource("StandardMaterial3D_nok4b")
radius = 0.03
height = 0.06

[sub_resource type="Curve" id="Curve_hym66"]
_data = [Vector2(0.568182, 1), 0.0, 1.29562, 0, 0, Vector2(1, 0), 0.116325, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_nspqw"]
_data = [Vector2(0.568182, 1), 0.0, 1.29562, 0, 0, Vector2(1, 0), 0.116325, 0.0, 0, 0]
point_count = 2

[node name="TimeCrystal" type="Node3D" groups=["time_crystal"]]
script = ExtResource("1_y1l36")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
layers = 16
modulate = Color(0.336061, 0.742025, 0.694754, 1)
billboard = 1
double_sided = false
alpha_cut = 1
texture = ExtResource("2_ln717")
region_rect = Rect2(0, 10.5, 916, 864.5)

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
layers = 16
modulate = Color(0.482353, 0.913725, 0.866667, 0.0705882)
pixel_size = 0.02
billboard = 1
double_sided = false
texture = ExtResource("2_ln717")
region_rect = Rect2(0, 10.5, 916, 864.5)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_hym66")

[node name="Gradual" type="CPUParticles3D" parent="."]
layers = 16
amount = 4
lifetime = 1.2
speed_scale = 0.5
fixed_fps = 16
local_coords = true
mesh = SubResource("SphereMesh_hym66")
emission_shape = 1
emission_sphere_radius = 0.25
direction = Vector3(1, 0, 1)
spread = 180.0
gravity = Vector3(0, 1, 0)
initial_velocity_max = 0.6
scale_amount_min = 0.8
scale_amount_max = 1.2
scale_amount_curve = SubResource("Curve_hym66")

[node name="Explosion" type="CPUParticles3D" parent="."]
layers = 16
emitting = false
one_shot = true
speed_scale = 1.2
explosiveness = 0.8
fixed_fps = 18
local_coords = true
mesh = SubResource("SphereMesh_hym66")
emission_shape = 1
emission_sphere_radius = 0.25
direction = Vector3(1, 0, 1)
spread = 180.0
gravity = Vector3(0, 1, 0)
initial_velocity_max = 1.5
scale_amount_min = 0.8
scale_amount_max = 1.2
scale_amount_curve = SubResource("Curve_nspqw")

[node name="MapMarker" type="Sprite3D" parent="."]
visible = false
layers = 2
modulate = Color(0, 0.698039, 0.854902, 1)
pixel_size = 0.03
billboard = 1
no_depth_test = true
render_priority = 120
texture = ExtResource("2_ln717")

[connection signal="body_entered" from="Area3D" to="." method="_on_body_entered"]
